<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/login_background"
    tools:context=".login.login"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/login_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/toolbar_home"
            app:elevation="4dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/login_logogeneral"
                    android:layout_margin="30dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_title_toolbar"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:layout_below="@+id/logo"
                    android:textColor="@android:color/white">
                </TextView>
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
            android:layout_centerVertical="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_usename"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="false"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/login_icon_person"
                        android:drawablePadding="15dp"
                        android:hint="Email"
                        android:fontFamily="@font/montserrat_regular"
                        android:textSize="14dp"
                        android:inputType="textEmailAddress"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="false"
                    app:passwordToggleEnabled="true"
                    app:counterEnabled="false"
                    app:counterMaxLength="10"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/login_icon_password"
                        android:drawablePadding="15dp"
                        android:hint="Password"
                        android:maxLength="10"
                        android:fontFamily="@font/montserrat_regular"
                        android:paddingLeft="10dp"
                        android:textSize="14dp"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:layout_marginTop="5dp"
                    android:id="@+id/tv_recuperar"
                    android:padding="5dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/login_recuperar_cuenta"
                    android:textAlignment="textEnd"
                    android:layout_below="@+id/cardview"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackground"/>
                <Button
                    android:id="@+id/btn_ok"
                    android:layout_marginTop="10dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_rectangle_blue"
                    android:text="I N G R E S A R"
                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:clickable="true"
                    android:layout_below="@+id/tv_recuperar"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/tv_conocemas"
            android:padding="1dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/login_conoce_mas"
            android:textAlignment="center"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"/>
        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/tv_pregunta"
            android:padding="1dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/login_pregunta"
            android:textAlignment="center"/>
        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/tv_registrate"
            android:padding="5dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/login_registrate"
            android:textAlignment="center"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            android:textColor="@color/colorAccent"/>
        <TextView
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Regístrate usando"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="12dp"
            android:gravity="center">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="1sp"
                android:background="?android:attr/listDivider"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"/>
            <com.google.android.gms.common.SignInButton
                android:id="@+id/btn_signin_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </com.google.android.gms.common.SignInButton>
            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="1sp"
                android:background="?android:attr/listDivider"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@android:color/white"
        android:padding="5dp">
        <LinearLayout
            android:id="@+id/lny_ubicanos"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:padding="5dp"
            android:clickable="true"
            android:background="?attr/selectableItemBackground">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:src="@drawable/login_icon_place"
                android:layout_gravity="center_horizontal">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="Ubicanos"
                android:textSize="12dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:textColor="@color/colorPrimary">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lny_phone"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:padding="5dp"
            android:clickable="true"
            android:background="?attr/selectableItemBackground">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:src="@drawable/login_icon_phone"
                android:layout_gravity="center_horizontal">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="Contáctenos"
                android:textSize="12dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:textColor="@color/colorPrimary">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lny_calculadora"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:padding="5dp"
            android:clickable="true"
            android:background="?attr/selectableItemBackground">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:src="@drawable/login_icon_calculator"
                android:layout_gravity="center_horizontal">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="Calculadora"
                android:textSize="12dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:textColor="@color/colorPrimary">
            </TextView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>